# weather-app-rust

./: .gitignore  Cargo.toml  readme
src/: main.rs
