[package]
name = "weather-app"
version = "0.1.0"
edition = "2021"
authors = ["Jayyy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
reqwest = "0.12.2"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0.57"